sql/test/unit/join_outside_of_virtual.exp
create table t1 (a INTEGER);
create table t2 (b INTEGER);

select * from t1, t2 where a = b;
^
|
 ----- ERROR
Error: line 4, character 0:
Joins outside of reactive views are considered bad practice in skdb.
You should first create a reactive view joining t1 and t2 with a query of the form:

create reactive view t1_t2 as select * from t1, t2 where a = b;

And then use t1_t2 directly.
PS: You can ignore this error message with --always-allow-joins (not recommended).
PS2: don't forget you can add indexes to reactive views.
